style.css
body {
    font-size: 24px;
    width: 100%;
    height: 100%;
    background-color: #fff;
    color: #000;
    font-family: sans-serif;
    padding: 0;
    margin: 0;
}

h1,
h2,
h3,
h4,
h5,
p {
    font-family: sans-serif;
    margin: 0;
}

p {
    font-size: 0.8em;
    margin-top: 1em;
    color: #888;
}

.content {
    width: 100vw;
    height: 100vh;
    display: flex;
    flex-direction: row;
}

.left, .right {
    width: 100%;
    height: 100%;
    padding: 1em;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
}

.bottom {
    min-height: 5em;
}

.bottom button {
    width: 100%;
}

.pathInput {
    margin-top: 1em;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    position: relative;
}

.pathInput label {
    color: #888;
    font-size: 0.75em;
    position: absolute;
    top: -1.25em;
    left: 0;
}

.pathInput input[type="text"] {
    flex-grow: 1;
    border: none;
    border-bottom: 1px solid #000;
}

.pathInput button {
    border-start-start-radius: 0;
    border-end-start-radius: 0;
}

button {
    background-color: rgb(33, 87, 236);
    color: #fff;
    border: none;
    border-radius: 5px;
    transform: scale(1);
    transition: background-color 0.3s, transform 0.3s;
    cursor: pointer;
    padding: 0.5em 1em;
}

button:hover {
    background-color: rgb(68, 116, 247);
}

button:active {
    background-color: rgb(28, 72, 192);
    transform: scale(0.9);
}

input {
    font-size: 1em;
    width: 100%;
}

textarea {
    width: 100%;
    font-size: 1em;
    margin-top: 1em;
    flex-grow: 1;
    min-height: 1em;
    resize: none;
}

